src/AssetLib/Parsing/Parser/Gdb/GdbParser.cpp

// Generated from ..\..\..\src\AssetLib\Parsing\Parser\Gdb\Gdb.g4 by ANTLR 4.10.1


#include "GdbListener.h"

#include "GdbParser.h"


using namespace antlrcpp;
using namespace gdb;

using namespace antlr4;

namespace {

struct GdbParserStaticData final {
  GdbParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  GdbParserStaticData(const GdbParserStaticData&) = delete;
  GdbParserStaticData(GdbParserStaticData&&) = delete;
  GdbParserStaticData& operator=(const GdbParserStaticData&) = delete;
  GdbParserStaticData& operator=(GdbParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag gdbParserOnceFlag;
GdbParserStaticData *gdbParserStaticData = nullptr;

void gdbParserInitialize() {
  assert(gdbParserStaticData == nullptr);
  auto staticData = std::make_unique<GdbParserStaticData>(
    std::vector<std::string>{
      "root", "sections", "materialSection", "materialNameList", "materialName", 
      "scaleSection", "vertexSection", "vertexList", "vertexDefPosition", 
      "vertexDefPositionUv", "vertexDefPositionUvColor", "vertexDefPositionUvNormal", 
      "vertexPosition", "vertexUv", "vertexColor", "vertexNormal", "faceSection", 
      "faceList", "face", "metaSection", "metaList", "meta", "metaVertices", 
      "metaFaces", "keyword2F", "keyword30", "metaBone", "metaObject", "floatOrIntConstant"
    },
    std::vector<std::string>{
      "", "'{'", "'}'", "'materials'", "'scale'", "'vertices'", "'faces'", 
      "'meta'", "'object'", "'v'", "'uv'", "'clr'", "'vn'", "'texture'", 
      "'f'", "'keyword2F'", "'keyword30'", "'bone'"
    },
    std::vector<std::string>{
      "", "", "", "Materials", "Scale", "Vertices", "Faces", "Meta", "Object", 
      "Vertex", "Uv", "Color", "Normal", "Texture", "Face", "Keyword2F", 
      "Keyword30", "Bone", "IntegerConstant", "FloatingConstant", "DigitSequence", 
      "StringLiteral", "Whitespace", "Newline", "BlockComment", "LineComment"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  gdbParserStaticData = staticData.release();
}

}

GdbParser::GdbParser(TokenStream *input) : GdbParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

GdbParser::GdbParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  GdbParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *gdbParserStaticData->atn, gdbParserStaticData->decisionToDFA, gdbParserStaticData->sharedContextCache, options);
}

GdbParser::~GdbParser() {
  delete _interpreter;
}

const atn::ATN& GdbParser::getATN() const {
  return *gdbParserStaticData->atn;
}

std::string GdbParser::getGrammarFileName() const {
  return "Gdb.g4";
}

const std::vector<std::string>& GdbParser::getRuleNames() const {
  return gdbParserStaticData->ruleNames;
}

const dfa::Vocabulary& GdbParser::getVocabulary() const {
  return gdbParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView GdbParser::getSerializedATN() const {
  return gdbParserStaticData->serializedATN;
}


//----------------- RootContext ------------------------------------------------------------------

GdbParser::RootContext::RootContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GdbParser::SectionsContext* GdbParser::RootContext::sections() {
  return getRuleContext<GdbParser::SectionsContext>(0);
}


size_t GdbParser::RootContext::getRuleIndex() const {
  return GdbParser::RuleRoot;
}

void GdbParser::RootContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRoot(this);
}

void GdbParser::RootContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRoot(this);
}

GdbParser::RootContext* GdbParser::root() {
  RootContext *_localctx = _tracker.createInstance<RootContext>(_ctx, getState());
  enterRule(_localctx, 0, GdbParser::RuleRoot);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    sections();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SectionsContext ------------------------------------------------------------------

GdbParser::SectionsContext::SectionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GdbParser::MaterialSectionContext* GdbParser::SectionsContext::materialSection() {
  return getRuleContext<GdbParser::MaterialSectionContext>(0);
}

GdbParser::ScaleSectionContext* GdbParser::SectionsContext::scaleSection() {
  return getRuleContext<GdbParser::ScaleSectionContext>(0);
}

GdbParser::VertexSectionContext* GdbParser::SectionsContext::vertexSection() {
  return getRuleContext<GdbParser::VertexSectionContext>(0);
}

GdbParser::FaceSectionContext* GdbParser::SectionsContext::faceSection() {
  return getRuleContext<GdbParser::FaceSectionContext>(0);
}

GdbParser::MetaSectionContext* GdbParser::SectionsContext::metaSection() {
  return getRuleContext<GdbParser::MetaSectionContext>(0);
}


size_t GdbParser::SectionsContext::getRuleIndex() const {
  return GdbParser::RuleSections;
}

void GdbParser::SectionsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSections(this);
}

void GdbParser::SectionsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSections(this);
}

GdbParser::SectionsContext* GdbParser::sections() {
  SectionsContext *_localctx = _tracker.createInstance<SectionsContext>(_ctx, getState());
  enterRule(_localctx, 2, GdbParser::RuleSections);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    materialSection();
    setState(62);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GdbParser::Scale) {
      setState(61);
      scaleSection();
    }
    setState(67);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GdbParser::Vertices) {
      setState(64);
      vertexSection();
      setState(65);
      faceSection();
    }
    setState(70);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GdbParser::Meta) {
      setState(69);
      metaSection();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MaterialSectionContext ------------------------------------------------------------------

GdbParser::MaterialSectionContext::MaterialSectionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GdbParser::MaterialSectionContext::Materials() {
  return getToken(GdbParser::Materials, 0);
}

GdbParser::MaterialNameListContext* GdbParser::MaterialSectionContext::materialNameList() {
  return getRuleContext<GdbParser::MaterialNameListContext>(0);
}


size_t GdbParser::MaterialSectionContext::getRuleIndex() const {
  return GdbParser::RuleMaterialSection;
}

void GdbParser::MaterialSectionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMaterialSection(this);
}

void GdbParser::MaterialSectionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMaterialSection(this);
}

GdbParser::MaterialSectionContext* GdbParser::materialSection() {
  MaterialSectionContext *_localctx = _tracker.createInstance<MaterialSectionContext>(_ctx, getState());
  enterRule(_localctx, 4, GdbParser::RuleMaterialSection);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    match(GdbParser::Materials);
    setState(73);
    match(GdbParser::T__0);
    setState(75);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GdbParser::StringLiteral) {
      setState(74);
      materialNameList();
    }
    setState(77);
    match(GdbParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MaterialNameListContext ------------------------------------------------------------------

GdbParser::MaterialNameListContext::MaterialNameListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<GdbParser::MaterialNameContext *> GdbParser::MaterialNameListContext::materialName() {
  return getRuleContexts<GdbParser::MaterialNameContext>();
}

GdbParser::MaterialNameContext* GdbParser::MaterialNameListContext::materialName(size_t i) {
  return getRuleContext<GdbParser::MaterialNameContext>(i);
}


size_t GdbParser::MaterialNameListContext::getRuleIndex() const {
  return GdbParser::RuleMaterialNameList;
}

void GdbParser::MaterialNameListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMaterialNameList(this);
}

void GdbParser::MaterialNameListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMaterialNameList(this);
}

GdbParser::MaterialNameListContext* GdbParser::materialNameList() {
  MaterialNameListContext *_localctx = _tracker.createInstance<MaterialNameListContext>(_ctx, getState());
  enterRule(_localctx, 6, GdbParser::RuleMaterialNameList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(79);
      materialName();
      setState(82); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == GdbParser::StringLiteral);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MaterialNameContext ------------------------------------------------------------------

GdbParser::MaterialNameContext::MaterialNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GdbParser::MaterialNameContext::StringLiteral() {
  return getToken(GdbParser::StringLiteral, 0);
}


size_t GdbParser::MaterialNameContext::getRuleIndex() const {
  return GdbParser::RuleMaterialName;
}

void GdbParser::MaterialNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMaterialName(this);
}

void GdbParser::MaterialNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMaterialName(this);
}

GdbParser::MaterialNameContext* GdbParser::materialName() {
  MaterialNameContext *_localctx = _tracker.createInstance<MaterialNameContext>(_ctx, getState());
  enterRule(_localctx, 8, GdbParser::RuleMaterialName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(84);
    match(GdbParser::StringLiteral);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScaleSectionContext ------------------------------------------------------------------

GdbParser::ScaleSectionContext::ScaleSectionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GdbParser::ScaleSectionContext::Scale() {
  return getToken(GdbParser::Scale, 0);
}

GdbParser::FloatOrIntConstantContext* GdbParser::ScaleSectionContext::floatOrIntConstant() {
  return getRuleContext<GdbParser::FloatOrIntConstantContext>(0);
}


size_t GdbParser::ScaleSectionContext::getRuleIndex() const {
  return GdbParser::RuleScaleSection;
}

void GdbParser::ScaleSectionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScaleSection(this);
}

void GdbParser::ScaleSectionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScaleSection(this);
}

GdbParser::ScaleSectionContext* GdbParser::scaleSection() {
  ScaleSectionContext *_localctx = _tracker.createInstance<ScaleSectionContext>(_ctx, getState());
  enterRule(_localctx, 10, GdbParser::RuleScaleSection);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(GdbParser::Scale);
    setState(87);
    floatOrIntConstant();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VertexSectionContext ------------------------------------------------------------------

GdbParser::VertexSectionContext::VertexSectionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GdbParser::VertexSectionContext::Vertices() {
  return getToken(GdbParser::Vertices, 0);
}

GdbParser::VertexListContext* GdbParser::VertexSectionContext::vertexList() {
  return getRuleContext<GdbParser::VertexListContext>(0);
}


size_t GdbParser::VertexSectionContext::getRuleIndex() const {
  return GdbParser::RuleVertexSection;
}

void GdbParser::VertexSectionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVertexSection(this);
}

void GdbParser::VertexSectionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVertexSection(this);
}

GdbParser::VertexSectionContext* GdbParser::vertexSection() {
  VertexSectionContext *_localctx = _tracker.createInstance<VertexSectionContext>(_ctx, getState());
  enterRule(_localctx, 12, GdbParser::RuleVertexSection);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    match(GdbParser::Vertices);
    setState(90);
    match(GdbParser::T__0);
    setState(92);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GdbParser::Vertex) {
      setState(91);
      vertexList();
    }
    setState(94);
    match(GdbParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VertexListContext ------------------------------------------------------------------

GdbParser::VertexListContext::VertexListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<GdbParser::VertexDefPositionUvColorContext *> GdbParser::VertexListContext::vertexDefPositionUvColor() {
  return getRuleContexts<GdbParser::VertexDefPositionUvColorContext>();
}

GdbParser::VertexDefPositionUvColorContext* GdbParser::VertexListContext::vertexDefPositionUvColor(size_t i) {
  return getRuleContext<GdbParser::VertexDefPositionUvColorContext>(i);
}

std::vector<GdbParser::VertexDefPositionUvNormalContext *> GdbParser::VertexListContext::vertexDefPositionUvNormal() {
  return getRuleContexts<GdbParser::VertexDefPositionUvNormalContext>();
}

GdbParser::VertexDefPositionUvNormalContext* GdbParser::VertexListContext::vertexDefPositionUvNormal(size_t i) {
  return getRuleContext<GdbParser::VertexDefPositionUvNormalContext>(i);
}

std::vector<GdbParser::VertexDefPositionUvContext *> GdbParser::VertexListContext::vertexDefPositionUv() {
  return getRuleContexts<GdbParser::VertexDefPositionUvContext>();
}

GdbParser::VertexDefPositionUvContext* GdbParser::VertexListContext::vertexDefPositionUv(size_t i) {
  return getRuleContext<GdbParser::VertexDefPositionUvContext>(i);
}

std::vector<GdbParser::VertexDefPositionContext *> GdbParser::VertexListContext::vertexDefPosition() {
  return getRuleContexts<GdbParser::VertexDefPositionContext>();
}

GdbParser::VertexDefPositionContext* GdbParser::VertexListContext::vertexDefPosition(size_t i) {
  return getRuleContext<GdbParser::VertexDefPositionContext>(i);
}


size_t GdbParser::VertexListContext::getRuleIndex() const {
  return GdbParser::RuleVertexList;
}

void GdbParser::VertexListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVertexList(this);
}

void GdbParser::VertexListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVertexList(this);
}

GdbParser::VertexListContext* GdbParser::vertexList() {
  VertexListContext *_localctx = _tracker.createInstance<VertexListContext>(_ctx, getState());
  enterRule(_localctx, 14, GdbParser::RuleVertexList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(116);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(97); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(96);
        vertexDefPositionUvColor();
        setState(99); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == GdbParser::Vertex);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(102); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(101);
        vertexDefPositionUvNormal();
        setState(104); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == GdbParser::Vertex);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(107); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(106);
        vertexDefPositionUv();
        setState(109); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == GdbParser::Vertex);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(112); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(111);
        vertexDefPosition();
        setState(114); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == GdbParser::Vertex);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VertexDefPositionContext ------------------------------------------------------------------

GdbParser::VertexDefPositionContext::VertexDefPositionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GdbParser::VertexPositionContext* GdbParser::VertexDefPositionContext::vertexPosition() {
  return getRuleContext<GdbParser::VertexPositionContext>(0);
}


size_t GdbParser::VertexDefPositionContext::getRuleIndex() const {
  return GdbParser::RuleVertexDefPosition;
}

void GdbParser::VertexDefPositionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVertexDefPosition(this);
}

void GdbParser::VertexDefPositionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVertexDefPosition(this);
}

GdbParser::VertexDefPositionContext* GdbParser::vertexDefPosition() {
  VertexDefPositionContext *_localctx = _tracker.createInstance<VertexDefPositionContext>(_ctx, getState());
  enterRule(_localctx, 16, GdbParser::RuleVertexDefPosition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    vertexPosition();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VertexDefPositionUvContext ------------------------------------------------------------------

GdbParser::VertexDefPositionUvContext::VertexDefPositionUvContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GdbParser::VertexPositionContext* GdbParser::VertexDefPositionUvContext::vertexPosition() {
  return getRuleContext<GdbParser::VertexPositionContext>(0);
}

GdbParser::VertexUvContext* GdbParser::VertexDefPositionUvContext::vertexUv() {
  return getRuleContext<GdbParser::VertexUvContext>(0);
}


size_t GdbParser::VertexDefPositionUvContext::getRuleIndex() const {
  return GdbParser::RuleVertexDefPositionUv;
}

void GdbParser::VertexDefPositionUvContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVertexDefPositionUv(this);
}

void GdbParser::VertexDefPositionUvContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVertexDefPositionUv(this);
}

GdbParser::VertexDefPositionUvContext* GdbParser::vertexDefPositionUv() {
  VertexDefPositionUvContext *_localctx = _tracker.createInstance<VertexDefPositionUvContext>(_ctx, getState());
  enterRule(_localctx, 18, GdbParser::RuleVertexDefPositionUv);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    vertexPosition();
    setState(121);
    vertexUv();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VertexDefPositionUvColorContext ------------------------------------------------------------------

GdbParser::VertexDefPositionUvColorContext::VertexDefPositionUvColorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GdbParser::VertexPositionContext* GdbParser::VertexDefPositionUvColorContext::vertexPosition() {
  return getRuleContext<GdbParser::VertexPositionContext>(0);
}

GdbParser::VertexUvContext* GdbParser::VertexDefPositionUvColorContext::vertexUv() {
  return getRuleContext<GdbParser::VertexUvContext>(0);
}

GdbParser::VertexColorContext* GdbParser::VertexDefPositionUvColorContext::vertexColor() {
  return getRuleContext<GdbParser::VertexColorContext>(0);
}


size_t GdbParser::VertexDefPositionUvColorContext::getRuleIndex() const {
  return GdbParser::RuleVertexDefPositionUvColor;
}

void GdbParser::VertexDefPositionUvColorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVertexDefPositionUvColor(this);
}

void GdbParser::VertexDefPositionUvColorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVertexDefPositionUvColor(this);
}

GdbParser::VertexDefPositionUvColorContext* GdbParser::vertexDefPositionUvColor() {
  VertexDefPositionUvColorContext *_localctx = _tracker.createInstance<VertexDefPositionUvColorContext>(_ctx, getState());
  enterRule(_localctx, 20, GdbParser::RuleVertexDefPositionUvColor);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(123);
    vertexPosition();
    setState(124);
    vertexUv();
    setState(125);
    vertexColor();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VertexDefPositionUvNormalContext ------------------------------------------------------------------

GdbParser::VertexDefPositionUvNormalContext::VertexDefPositionUvNormalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GdbParser::VertexPositionContext* GdbParser::VertexDefPositionUvNormalContext::vertexPosition() {
  return getRuleContext<GdbParser::VertexPositionContext>(0);
}

GdbParser::VertexUvContext* GdbParser::VertexDefPositionUvNormalContext::vertexUv() {
  return getRuleContext<GdbParser::VertexUvContext>(0);
}

GdbParser::VertexNormalContext* GdbParser::VertexDefPositionUvNormalContext::vertexNormal() {
  return getRuleContext<GdbParser::VertexNormalContext>(0);
}


size_t GdbParser::VertexDefPositionUvNormalContext::getRuleIndex() const {
  return GdbParser::RuleVertexDefPositionUvNormal;
}

void GdbParser::VertexDefPositionUvNormalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVertexDefPositionUvNormal(this);
}

void GdbParser::VertexDefPositionUvNormalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVertexDefPositionUvNormal(this);
}

GdbParser::VertexDefPositionUvNormalContext* GdbParser::vertexDefPositionUvNormal() {
  VertexDefPositionUvNormalContext *_localctx = _tracker.createInstance<VertexDefPositionUvNormalContext>(_ctx, getState());
  enterRule(_localctx, 22, GdbParser::RuleVertexDefPositionUvNormal);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(127);
    vertexPosition();
    setState(128);
    vertexUv();
    setState(129);
    vertexNormal();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VertexPositionContext ------------------------------------------------------------------

GdbParser::VertexPositionContext::VertexPositionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GdbParser::VertexPositionContext::Vertex() {
  return getToken(GdbParser::Vertex, 0);
}
